--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,13 @@ authors = ["eclair-montague"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bootloader = "0.9.3"
 
 [profile.dev]
 panic = "abort"
 
 [profile.release]
 panic = "abort"
+
+[package.metadata.bootimage]
+build-command = ["xbuild"]
