--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ouesu"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 authors = ["eclair-montague"]
 
@@ -10,6 +10,8 @@ authors = ["eclair-montague"]
 bootloader = "0.9.3"
 volatile = "0.2.6"
 spin = "0.9.2"
+x86_64 = "0.14.2"
+uart_16550 = "0.2.0"
 
 [profile.dev]
 panic = "abort"
@@ -19,6 +21,12 @@ panic = "abort"
 
 [package.metadata.bootimage]
 build-command = ["xbuild"]
+test-args = [
+    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
+    "-serial", "stdio"
+]
+test-timeout = 300
+test-success-exit-code = 33
 
 [dependencies.lazy_static]
 version = "1.0"
