--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,7 @@ test-success-exit-code = 33
 [dependencies.lazy_static]
 version = "1.0"
 features = ["spin_no_std"]
+
+[[test]]
+name = "should_panic"
+harness = false
