--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ouesu"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 authors = ["eclair-montague"]
 
@@ -12,6 +12,8 @@ volatile = "0.2.6"
 spin = "0.9.2"
 x86_64 = "0.14.2"
 uart_16550 = "0.2.0"
+pic8259 = "0.10.2"
+pc-keyboard = "0.5.1"
 
 [profile.dev]
 panic = "abort"
