--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "ouesu"
-version = "0.1.5"
+version = "0.1.6"
 edition = "2021"
 authors = ["eclair-montague"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bootloader = "0.9.3"
+bootloader = { version = "0.9.3", features = ["map_physical_memory"]}
 volatile = "0.2.6"
 spin = "0.9.2"
 x86_64 = "0.14.2"
